# Cactus-Bot

./: .gitignore  README.md  main.py  pyproject.toml  server.py  shop.txt  upcoming.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
static/: style.css
templates/: base.html  index.html  leaderboard.html  notfound.html  profile.html  search.html  stats.html
