[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "discord-bot"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^2.3"
python = "^3.8"
"discord.py" = "^1.5.1"
requests = "^2.25.1"
dnspython = "^2.1.0"
pymongo = "^4.5"
[tool.poetry.dev-dependencies]
